# elden-ring-performance-tweaks

./: .gitignore  Cargo.toml  README.md  er_performance_tweaks_config.ini
src/: lib.rs
